Ajuste para revisar que todas las clases tengan pruebas unitarias.

--- a/force-app/test/default/classes/DemoControllerTest.cls
+++ b/force-app/test/default/classes/DemoControllerTest.cls
@@ -1,6 +1,6 @@
 
 @isTest
-private class DemoControllerTests {
+private class DemoControllerTest {
     @isTest static void testConstructor() {
     	Contact contact = new Contact(LastName='Smith');
     	insert contact;
